# hsh

./: LICENSE  README.md
source-code/: Cargo.toml  prompt.rs  security.rs  vars.rs
source-code/src/: arithmetic.rs  builtins.rs  builtins_native.rs  config.rs  docs.rs  execute.rs  git_info.rs  helper.rs  history.rs  jobs.rs  main.rs  path_cache.rs  prompt.rs  redirect.rs  script.rs  settings.rs  smarthints.rs  theme.rs  vars.rs
