[package]
name = "hsh"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
chrono = "0.4.38"
hk-parser = "0.2.1"
libc = "0.2.155"
shlex = "1.3.0"
indexmap = "2.13.0"
tokio = { version = "1.40.0", features = ["full", "process"] }
sysinfo = "0.30.5"
terminal_size = "0.3.0"
ansi-str = "0.3.0"
