[package]
name = "hsh"
version = "0.3.4"
edition = "2021"

[dependencies]
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
hk-parser = "0.2.1"
libc = "0.2.155"
shlex = "1.3.0"
indexmap = "2.13.0"
tokio = { version = "1.40.0", features = ["full", "process"] }
sysinfo = "0.30.5"
terminal_size = "0.3.0"
ansi-str = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
glob = "0.3"
nix = { version = "0.27", features = ["process", "signal"] }
