[package]
name    = "hsh"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "hsh"
path = "src/main.rs"

[dependencies]
rustyline         = "14.0.0"
rustyline-derive  = "0.10.0"
chrono            = { version = "0.4.38", features = ["serde"] }
hk-parser         = "0.3.0"
libc              = "0.2.155"
shlex             = "1.3.0"
indexmap          = "2.13.0"
tokio             = { version = "1.40.0", features = ["full", "process"] }
sysinfo           = "0.30.5"
terminal_size     = "0.3.0"
ansi-str          = "0.3.0"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
fuzzy-matcher     = "0.3"
glob              = "0.3"
nix               = { version = "0.27", features = ["process", "signal"] }
rand              = "0.8"
walkdir           = "2.4"
syntect           = "5.0"
regex             = "1.10"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true
